--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@ionic/angular": "^5.9.4",
     "core-js": "^2.5.4",
     "firebase": "^5.8.2",
-    "rxjs": "~6.6.7",
+    "rxjs": "^6.6.7",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
